# Tavern

./: .gitignore  BREWFILE_ERROR_HANDLING.md  CLAUDE.md  CONTEXT.md  CONTRIBUTING.md  Justfile  README.md  ROADMAP.md  TAP_INSTALL_VERIFICATION.md  agents.md  app_log.txt  dev.hanthor.Tavern.Devel.json  dev.hanthor.Tavern.json  meson.build  meson_options.txt  org.tunaos.tavern.Devel.json  org.tunaos.tavern.json  renovate.json  run.sh  tavern.flatpakrepo
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: flatpak.yml  macos-release.yml  promote-to-prod.yml  publish-flatpak.yml  release.yml  tag.yml  update-homebrew-tap.yml  verify-tap-install.yml
data/: dev.hanthor.Tavern-mime.xml  dev.hanthor.Tavern.desktop.in  dev.hanthor.Tavern.gschema.xml  dev.hanthor.Tavern.metainfo.xml.in  dev.hanthor.Tavern.search-provider.ini.in  dev.hanthor.Tavern.service.in  meson.build  org.tunaos.tavern.desktop.in  org.tunaos.tavern.gschema.xml.in  org.tunaos.tavern.service.in
docs/adr/: 0001-homebrew-6-floor.md
docs/reports/: TAP_INSTALL_VERIFICATION.md
index/: static
plan/: plan.md
po/: POTFILES.in  meson.build  tavern.pot
skills/: README.md  build.md  features.md  profiling.md
squashfs-root/: .DirIcon  AppRun  linuxdeploy.desktop
squashfs-root/plugins/linuxdeploy-plugin-appimage/appimagetool-prefix/: appimagetool.desktop
src/: application.py  backend.py  backend_icons.py  brew_env.py  brewfile-dialog.blp  brewfile-page.blp  brewfile_dialog.py  brewfile_page.py  browse-page.blp  browse_page.py  git_forge.py  global_progress.py  installed-page.blp  installed_page.py  logging_util.py  main.py  media.py  meson.build  package-details.blp  package-rich-tile.blp  package-tile.blp  package.py  package_details.py  package_rich_tile.py  package_tile.py  pasar.in  screenshot_lightbox.py  search-page.blp  search_page.py  search_provider.py  stats-dialog.blp  stats_dialog.py  style.css  tap-page.blp  tap_page.py  taps.py  task-panel.blp  task_manager.py  task_panel.py  tavern.gresource.xml  (+5 more)
tests/: conftest.py  test_application.py  test_backend.py  test_backend_icons.py  test_benchmarks.py  test_brewfile_dialog.py  test_brewfile_page.py  test_browse_page.py  test_git_forge.py  test_global_progress.py  test_homebrew_cask.py  test_installed_page.py  test_integration.py  test_logging_util.py  test_main.py  test_package_details.py  test_package_rich_tile.py  test_package_tile.py  test_screenshot_lightbox.py  test_search_page.py  test_search_provider.py  test_stats_dialog.py  test_tap_page.py  test_task_manager.py  test_task_panel.py  test_ui_instantiation.py  test_updates_card.py  test_version_history_dialog.py  test_window.py
tests/scratch/: test_app.py  test_assets.py  test_dbus.py  test_gvariant.py  test_variant.py
